fixed clipping issues in text overlay and logo

--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @media only screen and (max-width:768px){
-    section{
+    .text-overlay {
+        font-size: 10px;
+    }
+
+    .bottom-bar {
+        font-size: 10px;
+    }
+
+    .circle-logo {
         font-size: 10px;
     }
 }
@@ -127,7 +135,7 @@ section {
     border-radius: 50%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     overflow: hidden;
 }
 
@@ -145,6 +153,7 @@ section {
     color:white;
     font-family: "Roboto Mono";
 }
+
 .container-outdoor-sports-field {
     position: relative;
     width: 100%;
@@ -154,6 +163,7 @@ section {
     color:white;
     font-family: "Roboto Mono";
 }
+
 .container-lucinda-court {
     position: relative;
     width: 100%;
@@ -163,6 +173,7 @@ section {
     color:white;
     font-family: "Roboto Mono";
 }
+
 .container-lucinda-park {
     position: relative;
     width: 100%;
@@ -172,6 +183,7 @@ section {
     color:white;
     font-family: "Roboto Mono";
 }
+
 .container-lucinda-studentcenter {
     position: relative;
     width: 100%;
@@ -181,6 +193,7 @@ section {
     color:white;
     font-family: "Roboto Mono";
 }
+
 .container-lucinda-entrance {
     position: relative;
     width: 100%;
@@ -189,12 +202,14 @@ section {
     background: url('Images/lucinda-gate.jpg') no-repeat center / cover;
     color:white;
     font-family: "Roboto Mono";
+
 }
 .cos-logo {
     position: absolute;
     top: 100px;
     left: 100px;
 }
+
 .cte-logo {
     position: absolute;
     top: 100px;
